2.2.4
- users may now be deleted completely with all booked times and project memberships
- projects can now be deleted with all subprojects, all team memberships and all booked times
  Both features are really necessary for house keeping of an oTt installation over times
  Well, finally we have them :-) 

2.2.3
- authentication against LDAP implemented, configurable in config.php
  password fields and reset password function will now automatically hidden if authentication against LDAP is used
  also the "change password" link in the navigation 
- overview by date, extended filter: display all user also for admins

2.2.2
- added feature for mobile access
  Call openTimetool with http://<server>/<ott-installdir>/mobile_login
  You'll get then a login form and afterwards a simplified variant of quick-log 
  without any window decorations and without JavaScript except for the button
  to manually reset the time field. So this button only will work on browsers
  of mobile devices who can handle that click event by JavaScript.  
  See also new Readme : mobile_access
- csv-export : field seperator can now be set in config.php. default = ';'
  date and time splitted in 2 columns
  duration column now in decimal notation (i.e. 1,5 instead of 1:30)
  comment column now as last one behind duration

2.2.1
- eliminated spanish language by now as we don't have a native speaker anymore
- Password reset : Admin can reset the password of a user. The user gets a random new one
  sent by mail.
- User may change now his password after successfull login
- Team inheritance from parent project by checkbox in team edit form
- Upgrade-readme and language files as seperate sql-files for import
   

2.2.0.3
- added a readme for suhosin patch (aka hardened php)
- added an "if" in htdocs to inform about possible suhosin problems
- some minor bugfixes (some <? substituded by <?php).

2.2.0.2
- Javascript bugfix implemented (loading Project trees)